--- a/landing_page.html
+++ b/landing_page.html
@@ -16,42 +16,357 @@
 <body class="d-flex align-items-center text-center" style="background-color: cornflowerblue; height: 100%;">
 <div id="background" class="backgroundBlurImg" style="filter: blur(8px);"></div>
 
-<div class="container backgroundContainer overflow-auto">
+<div class="container backgroundContainer">
+
+	<!--Nav Bar-->
 	<div class="row gy-5">
-	  <div class="col-12">
-		<nav class="p-3 navbar navbar-expand-lg navbar-light bg-light">
-			<div class="container-fluid">
-				<div class="navbar-brand">
-				<img src="/favicon.ico" alt="Contactical Logo" width="25" height="25" class="d-inline-block align-top">
-				Contactical
-				</div>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-				  <span class="navbar-toggler-icon"></span>
+		<div class="col-12">
+			<div class="p-3 beveledBox" style="font-size: 40px;">
+				<img src="/android-chrome-512x512.png" alt="Contactical Logo" width="50" height="50" class="d-inline-block align-top" style="margin-right: -3px;">
+				ontactical
+			</div>	
+		</div>
+
+	  <!--Contacts-->
+	  <div class="col-4 overflow-hidden">
+		<div class="p-3 beveledBox">  
+			  <div class="input-group mb-3">
+				<input type="text" class="form-control" placeholder="Search Query">
+				<button type="button" class="btn btn-outline-secondary">All</button>
+				<button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+				  <span class="visually-hidden">Toggle Dropdown</span>
 				</button>
-				<div class="collapse navbar-collapse" id="navbarText">
-				  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="#">Home</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">Features</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">Pricing</a>
-					</li>
-				  </ul>
-				  <span class="navbar-text">
-					Navbar text with an inline element
-				  </span>
+				<ul class="dropdown-menu dropdown-menu-end">
+				  <li><a class="dropdown-item" href="#">Name</a></li>
+				  <li><a class="dropdown-item" href="#">Phone Number</a></li>
+				  <li><a class="dropdown-item" href="#">Address</a></li>
+				</ul>
+			</div>
+			<ul class="list-group contacts overflow-auto">
+				<!--Contact Group-->
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+				<a class="contact-link" href="#">
+					<div class="list-group-item d-flex contact-card" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+						</div>
+					</div>
+				</a>
+			</ul>
+		</div>
+	  </div>
+
+	  <!--Actions-->
+	  <div class="col-8">
+		<div class="p-3 beveledBox">
+			<!--Name header-->
+			<div class="list-group-item d-flex mb-5" style="min-height: 50px; border: none;">
+				<div class="profile-icon d-flex justify-content-center align-self-center">
+					<div class="align-self-center" style="width: 100%;">
+						<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+					</div>
+				</div>
+				<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+					<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
 				</div>
 			</div>
-		</nav>
-	  </div>
-	  <div class="col-4">
-		<div class="p-3 beveledBox">Contacts</div>
-	  </div>
-	  <div class="col-8">
-		<div class="p-3 beveledBox">Actions</div>
+			<!--Info-->
+			<div class="info">
+				<form class="row g-3">
+					<div class="col-md-4">
+						<label for="first-name" class="form-label">First Name</label>
+						<input type="name" class="form-control" id="first-name">
+					</div>
+					<div class="col-md-4">
+						<label for="last-name" class="form-label">Last Name</label>
+						<input type="name" class="form-control" id="last-name">
+					</div>
+					<div class="col-md-4">
+						<label for="phone-number" class="form-label">Phone Number</label>
+						<input type="phone-number" class="form-control" id="phone-number">
+					</div>
+					<div class="col-12">
+						<label for="inputAddress" class="form-label">Address</label>
+						<input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+					</div>
+					<div class="col-md-6">
+						<label for="inputCity" class="form-label">City</label>
+						<input type="text" class="form-control" id="inputCity">
+					</div>
+					<div class="col-md-4">
+						<label for="inputState" class="form-label">State</label>
+						<select id="inputState" class="form-select">
+							<option selected>Choose...</option>
+							<option>...</option>
+						</select>
+					</div>
+					<div class="col-md-2">
+						<label for="inputZip" class="form-label">Zip</label>
+						<input type="text" class="form-control" id="inputZip">
+					</div>
+					<div class="col-12">
+					<button type="submit" class="btn btn-primary">Save</button>
+					</div>
+				</form>
+			</div>
+		</div>
 	  </div>
 	</div>
 </div>
