--- a/landing_page.html
+++ b/landing_page.html
@@ -21,10 +21,23 @@
 	<!--Nav Bar-->
 	<div class="row gy-5">
 		<div class="col-12">
-			<div class="p-3 beveledBox" style="font-size: 40px;">
-				<img src="/android-chrome-512x512.png" alt="Contactical Logo" width="50" height="50" class="d-inline-block align-top" style="margin-right: -3px;">
-				ontactical
-			</div>	
+			<div class="p-1 beveledBox">
+				<nav class="navbar navbar-expand-lg navbar-light">
+					<div class="container-fluid">
+						<div style="font-size: 30px;">
+							<img src="/android-chrome-512x512.png" alt="Contactical Logo" width="40" height="40" class="d-inline-block align-top" style="margin-right: -3px;">
+							ontactical
+						</div>
+						<h5 class="text-muted" style="margin-top: 5px;">The Most Tactical way to store contacts.</h5>
+						<div>
+							<p id="welcome" style="font-size:medium;"></p>
+							<div style="margin-top: -20px; text-align: right;">
+								<a href="javascript:doLogout()">Logout</a>
+							</div>
+						</div>
+					</div>
+				</nav>
+			</div>
 		</div>
 
 	  <!--Contacts-->
@@ -320,11 +333,11 @@
 			<div class="list-group-item d-flex mb-5" style="min-height: 50px; border: none;">
 				<div class="profile-icon d-flex justify-content-center align-self-center">
 					<div class="align-self-center" style="width: 100%;">
-						<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+						<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0" id="contact-initials">CI</h3>
 					</div>
 				</div>
 				<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
-					<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+					<h5 style="text-align: center; margin: 0; width: 100%;" id="contact-name">Editing Tyler Mathis</h5>
 				</div>
 			</div>
 			<!--Info-->
