--- a/landing_page.html
+++ b/landing_page.html
@@ -100,32 +100,32 @@
 									<div class="info">
 										<form class="row g-3">
 											<div class="col-md-4">
-												<label for="first-name" class="form-label">First Name</label>
-												<input type="name" class="form-control" id="first-name">
+												<label for="new-first-name" class="form-label">First Name</label>
+												<input type="name" class="form-control" id="new-first-name">
 											</div>
 											<div class="col-md-4">
-												<label for="last-name" class="form-label">Last Name</label>
-												<input type="name" class="form-control" id="last-name">
+												<label for="new-last-name" class="form-label">Last Name</label>
+												<input type="name" class="form-control" id="new-last-name">
 											</div>
 											<div class="col-md-4">
-												<label for="phone-number" class="form-label">Phone Number</label>
-												<input type="phone-number" class="form-control" id="phone-number">
+												<label for="new-phone-number" class="form-label">Phone Number</label>
+												<input type="phone-number" class="form-control" id="new-phone-number">
 											</div>
 											<div class="col-8">
-												<label for="inputAddress" class="form-label">Address</label>
-												<input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+												<label for="new-address" class="form-label">Address</label>
+												<input type="text" class="form-control" id="new-address" placeholder="1234 Main St">
 											</div>
 											<div class="col-md-4">
-												<label for="inputZip" class="form-label">Zip</label>
-												<input type="text" class="form-control" id="inputZip">
+												<label for="new-zip" class="form-label">Zip</label>
+												<input type="text" class="form-control" id="new-zip">
 											</div>
 											<div class="col-md-8">
-												<label for="inputCity" class="form-label">City</label>
-												<input type="text" class="form-control" id="inputCity">
+												<label for="new-city" class="form-label">City</label>
+												<input type="text" class="form-control" id="new-city">
 											</div>
 											<div class="col-md-4">
-												<label for="inputState" class="form-label">State</label>
-												<select id="inputState" class="form-select">
+												<label for="new-state" class="form-label">State</label>
+												<select id="new-state" class="form-select">
 													<option selected>Choose...</option>
 													<option value="AL">Alabama</option>
 													<option value="AK">Alaska</option>
@@ -185,7 +185,7 @@
 								</div>
 								<div class="modal-footer">
 									<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-									<button type="button" class="btn btn-primary">Save changes</button>
+									<button type="button" class="btn btn-primary" onclick="doCreateContact()">Save changes</button>
 								</div>
 							</div>
 						</div>
