--- a/landing_page.html
+++ b/landing_page.html
@@ -74,7 +74,7 @@
 
 	<!--Actions-->
 	<div class="col-8">
-		<div class="p-3 beveledBox">
+		<div class="p-3 beveledBox" id="notificationLanding">
 			<div class="row gy-3">
 
 				<!-- New -->
@@ -185,7 +185,7 @@
 								</div>
 								<div class="modal-footer">
 									<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-									<button type="button" class="btn btn-primary" onclick="doCreateContact()">Save changes</button>
+									<button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="doCreateContact()">Save changes</button>
 								</div>
 							</div>
 						</div>
