--- a/landing_page.html
+++ b/landing_page.html
@@ -179,15 +179,20 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-10"></div>
+					<div class="col-8">
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Contact Info</h5>
+						</div>
+					</div>
+					<div class="col-2"></div>
 
 					<!-- Data -->
 					<div class="col-2"></div>
 					<div class="col-8">
 						<div style="border: 1px solid #ccc; border-radius: 16px;">
 							<div class="row">
-													<!-- Edit -->
-								<div class="col-4" style="margin-top: 10px;">
+								<!-- Edit -->
+								<div class="col-md-4" style="min-height: 50px; margin-top: 25px;">
 									<!-- Edit Modal Trigger -->
 									<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editModal">
 										Edit
@@ -307,9 +312,20 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-4" style="margin-top: 10px;"></div>
+								<div class="col-md-4">
+									<div class="d-flex" style="min-height: 50px; margin-top: 25px;">
+										<div class="profile-icon d-flex justify-content-center align-self-center">
+											<div class="align-self-center" style="width: 100%;">
+												<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+											</div>
+										</div>
+										<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+											<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+										</div>
+									</div>
+								</div>
 								<!-- Delete -->
-								<div class="col-4" style="margin-top: 10px;">
+								<div class="col-md-4" style="min-height: 50px; margin-top: 25px;">
 									<!-- Delete Modal Trigger -->
 									<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#deleteModal">
 										Delete
@@ -329,20 +345,6 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-md-4"></div>
-								<div class="col-md-4">
-									<div class="d-flex" style="min-height: 50px; margin-top: 25px;">
-										<div class="profile-icon d-flex justify-content-center align-self-center">
-											<div class="align-self-center" style="width: 100%;">
-												<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
-											</div>
-										</div>
-										<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
-											<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-4"></div>
 								<div class="col-12">
 									<div class="info" style="margin-top: 25px;">
 										<form class="row g-3">
