--- a/landing_page.html
+++ b/landing_page.html
@@ -208,10 +208,10 @@
 													<h5 class="modal-title">Editing</h5>
 													<div class="profile-icon d-flex justify-content-center align-self-center" style="margin-left: 82px;">
 														<div class="align-self-center" style="width: 100%;">
-															<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0" id="contact-initials">CI</h3>
+															<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0" id="edit-initials"></h3>
 														</div>
 													</div>
-													<h5 class="modal-title" id="contact-name">Contact Name</h5>
+													<h5 class="modal-title" id="edit-fullname"></h5>
 													<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 												</div>
 
@@ -221,32 +221,32 @@
 													<div class="info">
 														<form class="row g-3">
 															<div class="col-md-4">
-																<label for="first-name" class="form-label">First Name</label>
-																<input type="name" class="form-control" id="first-name">
+																<label for="edit-first-name" class="form-label">First Name</label>
+																<input type="name" class="form-control" id="edit-first-name">
 															</div>
 															<div class="col-md-4">
-																<label for="last-name" class="form-label">Last Name</label>
-																<input type="name" class="form-control" id="last-name">
+																<label for="edit-last-name" class="form-label">Last Name</label>
+																<input type="name" class="form-control" id="edit-last-name">
 															</div>
 															<div class="col-md-4">
-																<label for="phone-number" class="form-label">Phone Number</label>
-																<input type="phone-number" class="form-control" id="phone-number">
+																<label for="edit-phone-number" class="form-label">Phone Number</label>
+																<input type="phone-number" class="form-control" id="edit-phone-number">
 															</div>
 															<div class="col-8">
-																<label for="inputAddress" class="form-label">Address</label>
-																<input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+																<label for="edit-address" class="form-label">Address</label>
+																<input type="text" class="form-control" id="edit-address" placeholder="1234 Main St">
 															</div>
 															<div class="col-md-4">
-																<label for="inputZip" class="form-label">Zip</label>
-																<input type="text" class="form-control" id="inputZip">
+																<label for="edit-zip" class="form-label">Zip</label>
+																<input type="text" class="form-control" id="edit-zip">
 															</div>
 															<div class="col-md-8">
-																<label for="inputCity" class="form-label">City</label>
-																<input type="text" class="form-control" id="inputCity">
+																<label for="edit-city" class="form-label">City</label>
+																<input type="text" class="form-control" id="edit-city">
 															</div>
 															<div class="col-md-4">
-																<label for="inputState" class="form-label">State</label>
-																<select id="inputState" class="form-select">
+																<label for="edit-state" class="form-label">State</label>
+																<select id="edit-state" class="form-select">
 																	<option selected>Choose...</option>
 																	<option value="AL">Alabama</option>
 																	<option value="AK">Alaska</option>
