--- a/landing_page.html
+++ b/landing_page.html
@@ -6,6 +6,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script type="text/javascript" src="js/contactStore.js"></script>
 	<script type="text/javascript" src="js/cookies.js"></script>
 	<script type="text/javascript" src="js/design.js"></script>
 	<script type="text/javascript" src="js/landing_page.js"></script>
@@ -175,7 +177,7 @@
 									</div>
 									<div class="modal-footer">
 										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-										<button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="doCreateContact()">Save changes</button>
+										<button id="create-btn" type="button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
 									</div>
 								</div>
 							</div>
@@ -342,7 +344,7 @@
 												</div>
 												<div class="modal-footer">
 													<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-													<button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="deleteSelectedContact()">Yes</button>
+													<button id="delete-btn" type="button" class="btn btn-primary" data-bs-dismiss="modal">Yes</button>
 												</div>
 											</div>
 										</div>
