--- a/landing_page.html
+++ b/landing_page.html
@@ -90,34 +90,34 @@
 									<div class="modal-body">
 										<!--Info-->
 										<div class="info">
-											<form class="row g-3">
+											<form id="editForm" class="row g-3">
 												<div class="col-md-4">
 													<label for="new-first-name" class="form-label">First Name</label>
-													<input type="name" class="form-control" id="new-first-name">
+													<input name="FirstName" type="name" class="form-control" id="new-first-name">
 												</div>
 												<div class="col-md-4">
 													<label for="new-last-name" class="form-label">Last Name</label>
-													<input type="name" class="form-control" id="new-last-name">
+													<input name="LastName" type="name" class="form-control" id="new-last-name">
 												</div>
 												<div class="col-md-4">
 													<label for="new-phone-number" class="form-label">Phone Number</label>
-													<input type="phone-number" class="form-control" id="new-phone-number">
+													<input name="PhoneNumber" type="phone-number" class="form-control" id="new-phone-number">
 												</div>
 												<div class="col-8">
 													<label for="new-address" class="form-label">Address</label>
-													<input type="text" class="form-control" id="new-address" placeholder="1234 Main St">
+													<input name="Address" type="text" class="form-control" id="new-address" placeholder="1234 Main St">
 												</div>
 												<div class="col-md-4">
 													<label for="new-zip" class="form-label">Zip</label>
-													<input type="text" class="form-control" id="new-zip">
+													<input name="ZIP" type="text" class="form-control" id="new-zip">
 												</div>
 												<div class="col-md-8">
 													<label for="new-city" class="form-label">City</label>
-													<input type="text" class="form-control" id="new-city">
+													<input name="City" type="text" class="form-control" id="new-city">
 												</div>
 												<div class="col-md-4">
 													<label for="new-state" class="form-label">State</label>
-													<select id="new-state" class="form-select">
+													<select name="State" id="new-state" class="form-select">
 														<option selected>Choose...</option>
 														<option value="AL">Alabama</option>
 														<option value="AK">Alaska</option>
