--- a/landing_page.html
+++ b/landing_page.html
@@ -43,7 +43,18 @@
 
 		<!--Contacts-->
 		<div class="col-4">
-			<div class="p-3 beveledBox">  
+
+			<div class="p-3 beveledBox">
+				<div class="d-flex" style="justify-content: space-between; align-items: center">
+					<h1 style="text-align: left">Contacts</h1>
+					<button data-bs-toggle="modal" data-bs-target="#newModal" type="button" class="btn btn-primary add-button">
+						<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16" style="padding: 0">
+							<path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+						</svg>
+						<div>Add</div>
+					</button>
+				</div>
+
 				<!--
 				<div class="input-group mb-3">
 					<input type="text" class="form-control" placeholder="Search Query">
@@ -71,10 +82,6 @@
 
 					<!-- New -->
 					<div class="col-2">
-						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newModal">
-							New
-						</button>
-
 						<!-- New Modal -->
 						<div class="modal fade" id="newModal" data-bs-backdrop="static" tabindex="-1">
 							<div class="modal-dialog modal-dialog-centered">
