--- a/landing_page.html
+++ b/landing_page.html
@@ -55,20 +55,19 @@
 					</button>
 				</div>
 
-				<!--
+
 				<div class="input-group mb-3">
-					<input type="text" class="form-control" placeholder="Search Query">
-					<button type="button" class="btn btn-outline-secondary">All</button>
-					<button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-						<span class="visually-hidden">Toggle Dropdown</span>
-					</button>
-					<ul class="dropdown-menu dropdown-menu-end">
-						<li><a class="dropdown-item" href="#">Name</a></li>
-						<li><a class="dropdown-item" href="#">Phone Number</a></li>
-						<li><a class="dropdown-item" href="#">Address</a></li>
-					</ul>
+					<input type="text" class="form-control" placeholder="Search Query" style="max-height: 40px; border-radius: 20px">
+<!--					<button type="button" class="btn btn-outline-secondary">All</button>-->
+<!--					<button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">-->
+<!--						<span class="visually-hidden">Toggle Dropdown</span>-->
+<!--					</button>-->
+<!--					<ul class="dropdown-menu dropdown-menu-end">-->
+<!--						<li><a class="dropdown-item" href="#">Name</a></li>-->
+<!--						<li><a class="dropdown-item" href="#">Phone Number</a></li>-->
+<!--						<li><a class="dropdown-item" href="#">Address</a></li>-->
+<!--					</ul>-->
 				</div>
-				-->
 				<ul class="list-group contacts overflow-auto" id="contactLanding">
 					<!--Contact Group-->
 				</ul>
