--- a/create_account.html
+++ b/create_account.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+	<meta content="utf-8" http-equiv="encoding">
 	<title>Contactical</title>
 	<link href="css/styles.css" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
